# pyo3_polars_test

./: Cargo.toml  README.md  pyproject.toml  rustfmt.toml
src/: lib.rs
