[package]
name = "pyo3_polars_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_polars_test"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
polars = {version = "0.37.0", features = ["lazy", "temporal"]}